@@ -51,8 +51,8 @@ function gambit_setup() {
 	
 	// Set up the WordPress core custom logo feature
 	add_theme_support( 'custom-logo', apply_filters( 'gambit_custom_logo_args', array(
-		'height' => 50,
-		'width' => 350,
+		'height' => 40,
+		'width' => 250,
 		'flex-height' => true,
 		'flex-width' => true,
 	) ) );
@@ -95,7 +95,7 @@ function gambit_widgets_init() {
 	register_sidebar( array(
 		'name' => esc_html__( 'Main Sidebar', 'gambit' ),
 		'id' => 'sidebar',
-		'description' => esc_html__( 'Appears on posts and pages except full width template.', 'gambit' ),
+		'description' => esc_html__( 'Appears on posts and pages except the full width template.', 'gambit' ),
 		'before_widget' => '<aside id="%1$s" class="widget %2$s clearfix">',
 		'after_widget' => '</aside>',
 		'before_title' => '<div class="widget-header"><h3 class="widget-title">',
@@ -105,7 +105,7 @@ function gambit_widgets_init() {
 	register_sidebar( array(
 		'name' => esc_html__( 'Small Sidebar', 'gambit' ),
 		'id' => 'sidebar-small',
-		'description' => esc_html__( 'Appears on posts and pages except full width template.', 'gambit' ),
+		'description' => esc_html__( 'Appears on posts and pages except the full width template.', 'gambit' ),
 		'before_widget' => '<aside id="%1$s" class="widget %2$s clearfix">',
 		'after_widget' => '</aside>',
 		'before_title' => '<div class="widget-header"><h3 class="widget-title">',
